--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="center-horiz">
-        <input type="button" value="Generate Password" name="generate_password" id="generate_password" />
+        <input type="button" value="Generate Password" name="generate-password" id="generate-password" />
         <div id="result"></div>
     </div>
     <script type="text/javascript" src="js/main.js"></script>
